--- a/benchmarking/new-primary.yaml
+++ b/benchmarking/new-primary.yaml
@@ -1,9 +1,10 @@
 apiVersion: apps/v1
-kind: DaemonSet
+kind: ReplicaSet
 metadata:
-  name: burstable-60-p-70
+  name: primary-70-b-60
   namespace: bu528-stop-wasting-the-cloud
 spec:
+  replicas: 1
   selector:
     matchLabels:
       app: wcg
@@ -15,16 +16,16 @@ spec:
       nodeName: k007
       containers:
       - name: latest
-        image: siddharthbakshi/wcg_centos
+        image: anshugoe/primary
         ports:
           - containerPort: 8080
         resources:
           requests:
-            cpu: "100m"
-            memory: "500Mi"
+            cpu: "2"
+            memory: "10Gi"
           limits:
-            cpu: "6"
-            memory: "30Gi"
+            cpu: "2"
+            memory: "10Gi"
         env:
         - name: boincurl
           valueFrom:
